# turbx

./: LICENSE  README.md  __init__.py  pyproject.toml  setup.py  turbx.py
docs/: Gemfile  _config.yml  environment.markdown  examples.markdown  index.markdown
docs/_includes/: head_custom.html
docs/data_classes/: data_classes.markdown  eas4.markdown  lpd.markdown  rgd.markdown
examples/: example_gradient.py
turbx/: __init__.py  turbx.py
